파일 경로 수정

--- a/main/FullCalender.html
+++ b/main/FullCalender.html
@@ -4,8 +4,8 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width initial-scale=1.0">
         <title>Full Calender</title>
-        <link rel="stylesheet" href="FullCalender.css">
-        <link rel="stylesheet" href="TodoList.css">
+        <link rel="stylesheet" href="./css/FullCalender.css">
+        <link rel="stylesheet" href="./css/TodoList.css">
     </head>
     <body>
         <div class="calendar">
@@ -39,8 +39,8 @@
             </div>
             <ul id="todo-list"></ul>
         </div>
-        <script type="module" src="FullCalender.js"></script>
-        <script type="module" src="Calender_func.js"></script>
-        <script type="module" src="TodoList.js"></script>
+        <script type="module" src="./js/FullCalender.js"></script>
+        <script type="module" src="./js/CalenderFunction.js"></script>
+        <script type="module" src="./js/TodoListFunction.js"></script>
     </body>
 </html>
